[gd_scene load_steps=13 format=3 uid="uid://cv33vxrhul0da"]

[ext_resource type="Script" uid="uid://l0bg0rmfgfar" path="res://Scripts/Boutons/Ok.gd" id="1_j3ftm"]
[ext_resource type="Script" uid="uid://kj1d5bktxntv" path="res://Scripts/controls.gd" id="1_nskhi"]
[ext_resource type="FontFile" uid="uid://dwlaoeqs2oqod" path="res://Font/8-BIT_WONDER.TTF" id="1_wbdo4"]
[ext_resource type="Shader" uid="uid://c7r3th281ihh2" path="res://Inventory/inv_animals.gdshader" id="2_drd8k"]
[ext_resource type="Script" uid="uid://b8wsd0kxnsqvy" path="res://Scripts/Titre.gd" id="2_tuees"]
[ext_resource type="AudioStream" uid="uid://2q10byvr4wgh" path="res://Sounds/coinc.mp3" id="3_bm1pe"]
[ext_resource type="Texture2D" uid="uid://b12y342v323gw" path="res://Textures/Inventaire/grey_pressed.png" id="3_bmbd1"]
[ext_resource type="Texture2D" uid="uid://bueqr4wj8dprb" path="res://Textures/Inventaire/blue.png" id="4_6yhjt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j32k3"]
shader = ExtResource("2_drd8k")
shader_parameter/scroll_speed = 1.0
shader_parameter/angle_degrees = 45.0
shader_parameter/repeat_x = 0.5
shader_parameter/repeat_y = 0.5
shader_parameter/row_offset = 2.5
shader_parameter/texture_to_scroll = ExtResource("3_bmbd1")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ilexp"]
bg_color = Color(0.654902, 0.298039, 0.14902, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7pwu"]
bg_color = Color(0.717647, 0.203922, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s75dg"]
bg_color = Color(0.654902, 0.298039, 0.160784, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="ControlsMenu" type="Node2D"]
script = ExtResource("1_nskhi")

[node name="BackgroundTiles" type="TextureRect" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_j32k3")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_6yhjt")
stretch_mode = 1

[node name="Valider" type="Button" parent="." groups=["buttons"]]
offset_left = 640.0
offset_top = 896.0
offset_right = 1277.0
offset_bottom = 1012.0
focus_mode = 0
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = SubResource("StyleBoxFlat_ilexp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b7pwu")
theme_override_styles/normal = SubResource("StyleBoxFlat_s75dg")
text = "VALIDATE"
script = ExtResource("1_j3ftm")

[node name="Sounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bm1pe")

[node name="Titre" type="Label" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 40)
offset_top = 128.0
offset_right = 1920.0
offset_bottom = 256.0
theme_override_colors/font_outline_color = Color(0.568627, 0, 0.760784, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_wbdo4")
theme_override_font_sizes/font_size = 64
text = "CONTROLS"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_tuees")

[node name="TitreTriche" type="Label" parent="Titre"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 128.0
theme_override_fonts/font = ExtResource("1_wbdo4")
theme_override_font_sizes/font_size = 64
text = "CONTROLS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 384.0
offset_top = 232.0
offset_right = 1536.0
offset_bottom = 896.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 32

[node name="Up" type="Label" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "KEY_UP"
horizontal_alignment = 2
vertical_alignment = 1

[node name="UpButton" type="Button" parent="ScrollContainer/VBoxContainer/Up" groups=["buttons"]]
layout_mode = 0
offset_left = 744.0
offset_right = 1000.0
offset_bottom = 64.0
focus_mode = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_ilexp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b7pwu")
theme_override_styles/normal = SubResource("StyleBoxFlat_s75dg")
text = "up"

[node name="Down" type="Label" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "KEY_DOWN"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DownButton" type="Button" parent="ScrollContainer/VBoxContainer/Down" groups=["buttons"]]
layout_mode = 0
offset_left = 744.0
offset_right = 1000.0
offset_bottom = 64.0
focus_mode = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_ilexp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b7pwu")
theme_override_styles/normal = SubResource("StyleBoxFlat_s75dg")
text = "down"

[node name="Left" type="Label" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "KEY_LEFT"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LeftButton" type="Button" parent="ScrollContainer/VBoxContainer/Left" groups=["buttons"]]
layout_mode = 0
offset_left = 744.0
offset_right = 1000.0
offset_bottom = 64.0
focus_mode = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_ilexp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b7pwu")
theme_override_styles/normal = SubResource("StyleBoxFlat_s75dg")
text = "left"

[node name="Right" type="Label" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "KEY_RIGHT"
horizontal_alignment = 2
vertical_alignment = 1

[node name="RightButton" type="Button" parent="ScrollContainer/VBoxContainer/Right" groups=["buttons"]]
layout_mode = 0
offset_left = 744.0
offset_right = 1000.0
offset_bottom = 64.0
focus_mode = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_ilexp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b7pwu")
theme_override_styles/normal = SubResource("StyleBoxFlat_s75dg")
text = "right"

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="Valider" to="Valider" method="_on_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Up/UpButton" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Down/DownButton" to="." method="_on_down_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Left/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Right/RightButton" to="." method="_on_right_button_pressed"]
